# PongGame

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.example.json  README.md
src/: main.cpp
src/game/: game.cpp  game.h
